...

    Surface(modifier = Modifier.fillMaxSize()) {
        Box(
            modifier = Modifier
                .fillMaxSize()
                .background(Brush.linearGradient(listOf(BackgroundStart, BackgroundEnd)))
                .testTag("screen-background"),
        ) {
            when (state.screen) {
                AppScreen.AnimeList -> AnimeListScreen(state, viewModel)
                AppScreen.SeasonalList -> SeasonalListScreen(state, viewModel)
                AppScreen.FollowedAnimeList -> AnimeListScreen(state, viewModel)
                AppScreen.EpisodeList -> EpisodeListScreen(state, viewModel)
...
